# smartsolar-ha

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Home.md  KEYWORDS.md  KNOWLEDGE.md  LICENSE  README.md  SESSION.md  clear_entities.ps1  hacs.json  pyproject.toml  upload_to_ha.py
.github/workflows/: ci.yml  hacs-validation.yml  release.yml
brands_prep/: SUBMIT_INSTRUCTIONS.md
custom_components/smartsolar_mppt/: .gitignore  ICON_README.md  README.md  __init__.py  api.py  config_flow.py  const.py  coordinator.py  diagnostics.py  example_configuration.yaml  hacs.json  manifest.json  mqtt_client.py  number.py  sensor.py  services.yaml  strings.json
custom_components/smartsolar_mppt/translations/: en.json  vi.json
tests/: __init__.py  conftest.py  test_api.py  test_config_flow.py  test_const.py  test_coordinator.py  test_mqtt.py  test_number.py  test_sensor.py
wiki/: Cài-đặt.md  Cấu-hình.md  Dashboard-Ideas.md  Home.md  Sensors.md  Troubleshooting.md
